# agent-harness

./: .gitignore  Quickstart.md  README.md
adk-agent/: .gitignore  README.md  adk_agent.py  pyproject.toml  web_app.py
adk-agent/templates/: index.html
adk-agent/workshop/: README.md
adk-agent/workshop/advanced/: 04_guardrail.md  05_custom_toolsets.md  06_multi_agent.md
adk-agent/workshop/beginner/: 01_explore.md  02_modify_instructions.md  03_add_tool.md
claude-agent/: Containerfile  README.md  Workshop-Read-Me.txt  agent_harness.py  pyproject.toml  requirements.txt  run.sh  web_app.py
claude-agent/inbox/: instruction.md  sample_data.csv
claude-agent/templates/: index.html
claude-agent/workshop/: README.md
claude-agent/workshop/advanced/: 04_guardrail_agent.md  05_custom_skills.md  06_multi_agent.md
claude-agent/workshop/beginner/: 01_explore.md  02_modify_instructions.md  03_add_simple_tool.md
claude-agent/workshop/demos/: D1_multistep_workflow.md  D2_zip_tool.md  D3_brain_swapping.md  D4_jailbreak_demo.md
deep-agent/: .gitignore  README.md  agent_harness.py  pyproject.toml  web_app.py
deep-agent/templates/: index.html
example-jobs/: READ.me  clear-jobs.ps1
example-jobs/inbox/: playbook-w-vul-1.yaml
example-jobs/job-ansible-lint-validation/: README.md
example-jobs/job-ansible-lint-validation/agent/: SKILL-ansible-lint.md  instruction.md
example-jobs/job-ansible-lint-validation/inbox/: playbook-clean.yaml  playbook-style-issues.yaml  playbook-violations.yaml
example-jobs/job-titanic-csv/: instruction-python.md  instruction.md
langchain-agent/: Containerfile  README.md  agent_harness.py  main.py  pyproject.toml  requirements.txt  web_app.py
langchain-agent/outbox/: snake.html
langchain-agent/templates/: index.html
pi-cli-agent/: Containerfile  Quickstart.md  README.md  pyproject.toml  web_app.py
pi-cli-agent/templates/: index.html
pi-cli-agent/workshop/: README.md
pi-cli-agent/workshop/advanced/: 04_guardrail.md  05_custom_skills.md  06_multi_agent.md
pi-cli-agent/workshop/beginner/: 01_explore.md  02_modify_instructions.md  03_add_skill.md
smolagents/: .env.example  .gitignore  README.md  Read.me  pyproject.toml  smolagent_agent.py  web_app.py
smolagents/templates/: index.html
smolagents/workshop/: README.md
smolagents/workshop/advanced/: 04_guardrail.md  05_custom_toolsets.md  06_multi_agent.md
smolagents/workshop/beginner/: 01_explore.md  02_modify_instructions.md  03_add_tool.md
strands-agent/: .env.example  .gitignore  README.md  pyproject.toml  strands_agent.py  web_app.py
strands-agent/templates/: index.html
strands-agent/workshop/: README.md
strands-agent/workshop/advanced/: 04_guardrail.md  05_custom_toolsets.md  06_multi_agent.md
strands-agent/workshop/beginner/: 01_explore.md  02_modify_instructions.md  03_add_tool.md
(+24 files in other folders)
