[project]
name = "langchain-agent"
version = "0.1.0"
description = "Web-based agent harness using LangChain DeepAgents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "deepagents>=0.1",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
]

[project.scripts]
langchain-agent-web = "web_app:main"

[tool.hatch.build.targets.wheel]
include = ["web_app.py", "templates/**"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
