[project]
name = "pi-cli-agent"
version = "0.1.0"
description = "Web-based agent runner using the pi CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
pi-agent-web = "web_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["web_app.py"]
